feat: Add instructions for build on Windows
Signed-off-by: jdsika <carlo.van-driesten@bmw.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Generate compile_commands.json for clang based tools
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+set(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
+
 # Add the include folder for public headers
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
