implement usage of external osi
Signed-off-by: Timm Ruppert <timm.ruppert@persival.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,8 +36,9 @@ if (LINK_WITH_SHARED_OSI)
     target_link_libraries(OSIUtilities PRIVATE open_simulation_interface)
 else ()
     target_link_libraries(OSIUtilities PRIVATE open_simulation_interface_pic)
-    include_directories(${OSI_INCLUDE_DIR})
 endif ()
+include_directories(${open_simulation_interface_BINARY_DIR})
+
 
 # get mcap and its dependencies
 find_package(PkgConfig REQUIRED)
